fixing metric tags